--- a/MenuMate/Services/ServicesApp/MenumateServices/ProjectInstaller.resx
+++ b/MenuMate/Services/ServicesApp/MenumateServices/ProjectInstaller.resx
@@ -127,7 +127,7 @@
     <value>17, 165</value>
   </metadata>
   <metadata name="serviceInstallerWebMate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 239</value>
+    <value>17, 202</value>
   </metadata>
   <metadata name="serviceInstallerSmartLink.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 276</value>
@@ -136,13 +136,16 @@
     <value>17, 128</value>
   </metadata>
   <metadata name="serviceInstallerSalesForceIntegration.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 202</value>
+    <value>17, 239</value>
   </metadata>
   <metadata name="serviceInstallerSiHotIntegration.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 313</value>
   </metadata>
   <metadata name="serviceInstallerWalletPayments.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>18, 345</value>
+  </metadata>
+  <metadata name="serviceInstallerAdyenIntegration.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>24, 372</value>
   </metadata>
   <metadata name="$this.TrayLargeIcon" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
